2006-01-22  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* src/gdict-applet.c (set_window_default_size),
	(gdict_applet_build_window), (gdict_applet_style_set): re-work the
	size calculation of the applet's window: now it should be multi-head
	aware (I don't have the hardware, so I really can't test it) and it
	has an upper bound limited to the monitor size.  Also, it should be
	a little bit wider by default.

2006-01-16  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* data/gnome-dictionary.schemas.in: fix a typo in the
	default-window-height key long comment.

2006-01-16  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* src/gdict-window.c (gdict_window_error_cb): remove the busy cursor in
	case of error.

2006-01-16  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* libgdict/gdict-context.c
	* libgdict/gdict-client-context.c
	* libgdict/gdict-defbox.c: use the new and faster g_slice_* calls from
	GLib HEAD in place of g_new.

	* libgdict/gdict-context.c: add the gtk-doc markings to the last
	missing functions.

2006-01-15  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	A data/french.desktop.in
	A data/spanish.desktop.in

	* data/french.desktop.in: add a source definition file for a
	French-based dictionary source.

	* data/spanish.desktop.in: add a source definition file for a
	Spanish-based dictionay source.

	* data/Makefile.am: add the two new dictionary sources.

2006-01-13  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* src/gdict-applet.c (gdict_applet_init), (gdict_applet_factory):
	move the menu items sensitivity set inside the applet's factory; this
	should close bug #326004 which was triggered if there was a delay
	in the creation of the bonobo ui control.

2006-01-13  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* src/gdict-applet.c (gdict_applet_set_menu_sensitive),
	(gdict_applet_lookup_start_cb), (gdict_applet_lookup_end_cb),
	(gdict_applet_error_cb), (gdict_applet_init): add a function
	to make the menu items sensitive.
