@@ -1,5 +1,11 @@
 2006-01-22  Emmanuele Bassi  <ebassi@cvs.gnome.org>
 
+	* src/gdict-window.c (set_window_default_size),
+	(gdict_window_style_set): port the size allocation code from the applet
+	to the main application, since it's a bit clearer.
+
+2006-01-22  Emmanuele Bassi  <ebassi@cvs.gnome.org>
+
 	* src/gdict-applet.c (set_window_default_size),
 	(gdict_applet_build_window), (gdict_applet_style_set): re-work the
 	size calculation of the applet's window: now it should be multi-head
